--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tit_activity_2">Getting Start</string>
+    <string name="card_apply_paragraph"><![CDATA[complete the application & and get evaluated to get the approved amount]]></string>
 </resources>
