adding event to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="to_upload_selfie">To upload selfie</string>
     <string name="device_information">Device Information</string>
     <string name="to_securely_link_application_to_phone">To securely link application to phone</string>
-    <string name="we_need_a_few_permission">We need a few permission!</string>
+    <string name="we_need_few_permission">We need few permission!</string>
     <string name="to_check_your_eligibility_laon_amount"><![CDATA[To check your eligibility & laon amount]]></string>
     <string name="sms">SMS</string>
     <string name="loaction">Loaction</string>
